--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,317 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: 1fr 148px 1fr;
+    align-items: center;
+    padding: 92px 52px 96px 51px;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+    justify-content: start;
+    list-style: circle;
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.header__links-list-item_no-bullet {
+    list-style: none;
+    text-decoration: none;
+}
+
+.header__links-list-item .header__link {
+    text-decoration: underline;
+    text-underline-position: under;
+    letter-spacing: 0.01em;
+}
+
+.header__logo-image {
+    width: 148px;
+    height: 105px;
+}
+
+.header__address {
+    width: 240px;
+    height: 98px;
+    display: flex;
+    justify-self: end;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    justify-self: flex-start;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24.3px;
+    letter-spacing: 0.01em;
+}
+
+.address__link {
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.cover {
+    z-index: -1;
+    position: relative;
+    min-height: 757px;
+    padding: 165px 50px 51px;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.overlay {
+    z-index: 0;
+    position: absolute;
+    inset: 0;
+    opacity: 60%;
+    background-color: black;
+}
+
+.cover__title {
+    z-index: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 1000px;
+    height: 355px;
+    font-weight: 800;
+    font-size: 100px;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 0.3em;
+    line-height: 1;
+}
+
+.aligned-text {
+    display: block;
+    line-height: 1.07;
+}
+
+.aligned-text_center {
+    margin-top: 7px;
+    text-align: center;
+    line-height: 1;
+}
+
+.aligned-text_right {
+    text-align: right;
+    line-height: 1.08;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0em;
+}
+
+.cover__description {
+    z-index: 1;
+    position: relative;
+    margin-top: 131px;
+    margin-left: 28px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cover__description-text {
+    font-weight: 400;
+    font-size: 22px;
+    text-transform: uppercase;
+    color: white;
+    line-height: 28px;
+    word-spacing: 19px;
+}
+
+.bet-button {
+    min-width: 256px;
+    min-height: 51px;
+    padding: 12px 32px 11px 31px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+    font-weight: 500;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.lots__heading {
+    margin: 176px 0 25px 64px;
+    font-weight: 800;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    min-height: 563px;
+    display: flex;
+}
+
+.card-link {
+    height: 100%;
+    display: block;
+    text-decoration: none;
+}
+
+.card {
+    height: 100%;
+    padding: 51px 40px 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card_type_film {
+    z-index: -1;
+    position: relative;
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position-x: center;
+}
+
+.card_type_book {
+    z-index: -1;
+    position: relative;
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position-x: center;
+}
+
+.card_type_picture {
+    z-index: -1;
+    position: relative;
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position-x: center;
+}
+
+.card__title {
+    z-index: 1;
+    position: relative;
+    color: white;
+    font-weight: 800;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    line-height: 120%;
+}
+
+.card__text {
+    z-index: 1;
+    position: relative;
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.ellipses {
+    letter-spacing: 4px;
+}
+
+.lots__look-more-link {
+    display: block;
+    margin: 30px 0 0 64px;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.about {
+    margin: 146px 24px 180px;
+}
+
+.about__column {
+    display: grid;
+    grid-template-columns: 334px 2fr;
+    column-gap: 25px;
+}
+
+.about__logo {
+    margin-top: 35px;
+    margin-left: 47px;
+    width: 240px;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    border-radius: 50%;
+    grid-row: 1/3;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+    align-self: center;
+}
+
+.about__title {
+    width: 693px;
+    margin-top: 136px;
+    margin-bottom: 100px;
+    font-weight: 800;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 149px 1fr;
+    align-items: start;
+    padding: 0 50px 88px;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.footer__menu-list-item .footer__menu-link {
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.footer__social-list {
+    width: 240px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-self: end;
+    list-style: none;
+}
+
+.footer__social-link {
+    display: block;
+    width: 48px;
+    height: 48px;
+}
